Made a lotta changes

--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Sri Lankan Cuisine</title>
+    <title>Odin Recipes</title>
 </head>
 <body>
-  <h1>Odin Recipes</h1>
+  <h1>Pancakes</h1>
+  <img src="images/Sri-Lankan-Cusine.jpeg" alt="Sri-Lankan Cusine">
   <ul>
-      <li> <a href="recipes/pancakes.html">Pancake</a></li>  
-      <li><a href="recipes/butterbeer.html">Butterbeer</a></li> 
-      <li><img src="image.png"></li> 
+      <li> <a href="recipes/Pancakes.html">Breakfasts</a></li>  
+      <li><a href="recipes/Butterbeer.html">Fun Snacks</a></li> 
+      
   </ul>
 
   
