--- a/recipes/Butterbeer.html
+++ b/recipes/Butterbeer.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Introduction</h1>
-    <img src="../images/butterbeer.jpeg">
+    <img src="../images/Butterbeer.jpeg">
     <p>
         Butterbeer is a fictional drink that we see so often in the Harry Potter series. It is often described as one of the tastiest drinks and almost considered a staple drink in the world of Harry Potter.
         Now butterbeer is no more a fictional drink. The recipe below takes you through a step-by-step method to whisk a butterbeer, in less than 30 minutes.
