--- a/recipes/Pancakes.html
+++ b/recipes/Pancakes.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pancakes</title>
+    <title>Breakfasts</title>
 </head>
 <body>
     <h1>Perfect Pancakes</h1>
-    <img src="../images/Pancake.jpeg">
+    <img src="../images/Pancakes.jpeg">
     <h3>Description</h3>
     <p>This easy recipe makes pancakes that are light and fluffy. You only
         need a few simple ingredients that you ptobably have in your kitchen right
