Done with the recipes for Biryani, made a change to index.html, adding a new link (Lunch/Dinner)

--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <title>Odin Recipes</title>
 </head>
 <body>
-  <h1>Pancakes</h1>
+  <h1>Recipes</h1>
   <img src="images/Sri-Lankan-Cusine.jpeg" alt="Sri-Lankan Cusine">
   <ul>
       <li> <a href="recipes/Pancakes.html">Breakfasts</a></li>  
-      <li><a href="recipes/Butterbeer.html">Fun Snacks</a></li> 
+      <li><a href="recipes/Butterbeer.html">Fun Snacks</a></li>
+      <li><a href="recipes/Biryani.html">Lunch/Dinner</a></li> 
       
   </ul>
 
