--- a/recipes/Biryani.html
+++ b/recipes/Biryani.html
@@ -61,6 +61,51 @@
 
     </ul>
 
+    <h3>Method</h3>
+
+    <ol>
+        <li>
+            <h4>Prepare saffron-kewra water and chop veggies</h4>
+            To make a delightful chicken biryani dish, firstly soak saffron
+            in water to prepare saffron water (one teaspoon saffron can be soaked in
+            1/4 cup water). Next, mix kewra drops in water and mix well to make kewra 
+            water. Set them aside for later usage. Now chop the onion and coriander 
+            leaves and keep them aside.
+        </li>
+        <img src="../images/saffron.jpeg" alt="Saffron">
+
+        <li>
+            <h4>Saute the onions</h4>
+            Meanwhile, heat refined oil in a deep bottomed pan. Once the oil is hot enough, 
+            add cumin seeds, bay leaf, green cardamom, black cardamom, cloves in it, and saute 
+            for about a minute. Then, add chopped onion to it and saute until pink. Now, add chicken 
+            into it with slit green chillies, turmeric, salt to taste, ginger garlic paste, red chilli 
+            powder and green chilli paste. Mix well all the spices and cook for 2-3 minutes. Then, add 
+            hung curd into it and give a mix. (Make sure the chicken is washed properly and patted dry 
+            before adding it to the dish)
+        </li>
+        <img src="../images/onions.jpeg" alt="sauted onions">
+
+        <li>
+            <h4>Cook biryani on low heat for 5-6 minutes</h4>
+            Turn the flame to medium again and add garam masala in it along with ginger julienned, coriander 
+            and mint leaves. Add kewra water, rose water and saffron water in it. Cook till the chicken is tender. 
+            Then add 1 cup cooked rice and spread evenly. Then add saffron water and pour ghee over it. You can now 
+            cook the dish without the lid or cover it with a lid to give a dum-effect due to the steam formation.            
+        </li>
+        <img src="../images/preheating.jpeg" alt="Biryani being heated">
+
+        <li>
+            <h4>Serve hot chicken biryani with your favourite chutney or raita</h4>
+            Cook for 15-20 minutes with a closed lid and garnish with 1 tbsp fried onions and coriander leaves. 
+            Serve hot chicken biryani with raita of your choice. <strong>Enjoy!</strong>
+        </li>
+        <img src="../images/done-bir.jpeg" alt="biryani">
+    </ol>
+<h3>
+    This is your recipe for the perfect biryani. Good luck and Happy cooking!
+</h3>
+
 
     
 </body>
